# cryptopuffies

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
contracts/: CryptoPuffies.sol  CryptoPuffiesBestFriends.sol  PuffiesIgloo.sol  PuffiesIgooV2.sol
docs/: CNAME  index.html  token-data.json
docs/assets/: index-190eee99.js  index-4516246c.css  index-644f180e.js  index-c00a170b.js
docs/legacy/: image-urls.json  token-data.json
src/: main.rs
src/cmd/: analyze.rs  generate.rs  mod.rs
src/components/Display/: Display.module.css  Display.tsx
src/components/Navigation/: Navigation.module.css  Navigation.tsx
src/hooks/: useMetaMask.tsx
src/utils/: index.ts
tools/: Cargo.toml
tools/src/: main.rs
tools/src/cmd/: analyze.rs  fetch.rs
