[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.103"
serde = {version = "1.0.174", features = ["derive"]}
image = "0.24.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.7"
clap = {version = "4.3.19", features = ["derive"]}